--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/jsonwebtoken": "^8.3.8",
     "@types/morgan": "^1.9.0",
     "@types/node": "^12.12.30",
-    "@types/react": "^16.9.23",
+    "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
     "@types/react-facebook-login": "^4.1.1",
     "@types/react-router-dom": "^5.1.3",
@@ -57,28 +57,29 @@
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.1.2",
-    "morgan": "^1.9.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "primereact": "^3.4.0",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-bootstrap-table-next": "^3.3.5",
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-bootstrap-table2-filter": "^1.3.1",
     "react-bootstrap-table2-toolkit": "^2.1.2",
-    "react-dom": "^16.13.0",
+    "react-calendar": "^3.0.0",
+    "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
-    "react-select": "^3.0.8",
+    "react-scripts": "^3.4.1",
+    "react-select": "^3.1.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.5",
     "sequelize-cli": "^5.5.1",
     "sequelize-typescript": "^1.1.0",
-    "ts-node": "^8.7.0",
+    "ts-node": "^8.8.1",
     "typeface-roboto": "0.0.75",
     "typescript": "^3.8.3",
     "yup": "^0.28.3"
@@ -116,7 +117,7 @@
     "concurrently": "^5.1.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "npm-run-all": "^4.1.5",
